hw-02/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
   - host: arch.homework
     http:
       paths:
        - path: /(otusapp/vpiatukhou/)?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 8000
